<resources>
    <string name="app_name">HostelVault</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up_allcaps">Sign Up</string>
    <string name="already_signed_up">Already Signed Up?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="you_example_com">you@example.com</string>
    <string name="phnnum">Mobile</string>
    <string name="hostel_name">Hostel Name</string>
    <string name="room_num">Room Number</string>
    <string name="not_yet_registered">Not Yet Registered?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="status">Status</string>
    <string name="you_are_in">You are IN!!</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="exit_story">Exit Story?</string>
    <string name="verify">Verify</string>
    <string name="verify_your_email">Verify Your Email!</string>
    <string-array name="spinner_items">
        <item>HV002-Daya Shree Boys</item>
        <item>DBH2</item>
    </string-array>


</resources>