<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".loginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="361dp"
            android:background="@drawable/boarder"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/logintv"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/lavender"
                android:textSize="36sp">

            </TextView>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/hint"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:autofillHints="emailAddress"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/you_example_com"
                    android:includeFontPadding="true"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginET_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:autofillHints="password"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_password"
                    android:includeFontPadding="true"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/rememberME"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp">

                </com.google.android.material.checkbox.MaterialCheckBox>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    android:id="@+id/forgotpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/lavender">

                </TextView>


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@null"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp">

            </com.google.android.material.button.MaterialButton>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_yet_registered"
                    android:textColor="@color/white"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/loginIntosignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Sign Up"
                    android:textColor="@color/lavender"
                    android:textSize="14sp">

                </TextView>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressbarSignin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

    </ProgressBar>


</LinearLayout>